# openfast-scripts

./: .gitignore  Makefile  README.md  README.rst  last_n.sh  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  run.sh  setup.py
notebooks/: 00_io.ipynb  01_postpro.ipynb
pyOF/: __init__.py  case_gen_config.yaml  cases.py  io.py  scada.py  utils.py  wind_input.py
tests/: case_gen_config.yaml  test_casegen.py
tests/ref_folder/: runAventa.fst
tests/ref_folder/Aventa/: Cp_Ct_Cq.Aventa.txt  DISCON.IN
tests/ref_folder/Aventa/Airfoils/: airfoil_0_coords.txt  airfoil_1_coords.txt  airfoil_2_coords.txt  airfoil_3_coords.txt  airfoil_4_coords.txt  airfoil_5_coords.txt  airfoil_6_coords.txt  cylinder_coords.txt
tests/ref_folder/Aventa/Wind/: _TURBSIM_INPUTS.inp
