[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyOF"
readme = "README.rst"
requires-python = ">=3.10.6"
authors = [{ name = "Florian Hammer", email = "florian.hammer@ost.ch" }]
maintainers = [{ name = "Florian Hammer", email = "florian.hammer@ost.ch" }]
dependencies = ["netCDF4", "pandas", "numpy", "pyFAST"]
description = "Placeholder for brief description"
copyright = "OST Ostschweizer Fachhochschule"
license = { file = "LICENSE" }
dynamic = ["version"]

[project.urls]
Source = "https://gitlab.ost.ch/wiseper/openfast-scripts"


[project.optional-dependencies]
dev = [
  "black>=22.10.0",
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.0.254",
  "hatch",
]

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
line-length = 79
fixable = ["I"]
exclude = [".env", ".venv", "venv", "notebooks"]
show-source = true

[tool.black]
line-length = 79
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''

[tool.hatch.version]
path = "pyOF/__about__.py"

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pyOF --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.coverage.run]
branch = true
parallel = true
omit = ["pyOF/__about__.py"]

[tool.hatch.build.targets.sdist]
only-include = ["pyOF"]

[project.scripts]
generate_power_curve_case = "pyOF.cases:generate_power_curve_case"
generate_turb_sim_bts = "pyOF.cases:generate_turb_sim_bts"
